--- a/css/style.css
+++ b/css/style.css
@@ -189,13 +189,18 @@ label span {
 #specs {
   margin-top: -84px;
 }
-/* Workaround for edge, negative margin-top on an element does not work with floating element above */
+/* Workaround for IE 11 and Edge, negative margin-top on an element does not work with floating element above */
 @supports (-ms-ime-align:auto) {
   #specs {
     position: relative;
     top: -76px;
     margin-bottom: -76px;
   }
+}
+_:-ms-fullscreen, :root #specs {
+  position: relative;
+  top: -76px;
+  margin-bottom: -76px;
 }
 #floating-phone {
   position: absolute;
@@ -263,13 +268,18 @@ label span {
     max-width: none;
     margin: 0;
   }
-  /* Workaround for edge, negative margin-top on an element does not work with floating element above */
+  /* Workaround for IE 11 and Edge, negative margin-top on an element does not work with floating element above */
   @supports (-ms-ime-align:auto) {
     #specs {
       position: relative;
       top: 0;
       margin-bottom: 0;
     }
+  }
+  _:-ms-fullscreen, :root #specs {
+    position: relative;
+    top: 0;
+    margin-bottom: 0;
   }
 }
 @media screen and (min-width: 961px) and (max-width: 1220px) {
